# nvim-remote-mirror

./: .gitignore  Cargo.toml  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml  release-dry-run.yml  release.yml
crates/nrm-agent/: Cargo.toml
crates/nrm-agent/benches/: agent_cli.rs
crates/nrm-agent/src/: main.rs  runtime.rs
crates/nrm-protocol/: Cargo.toml
crates/nrm-protocol/benches/: frames.rs
crates/nrm-protocol/src/: lib.rs  runtime.rs
crates/nrm-pty/: Cargo.toml
crates/nrm-pty/src/: lib.rs  unix.rs  windows.rs
crates/nrm-registry/: Cargo.toml
crates/nrm-registry/src/: core.rs  fetch.rs  lib.rs  url_policy.rs
crates/nrm-registry/tests/: core.rs  url_policy.rs
crates/nrm-sidecar/: Cargo.toml
crates/nrm-sidecar/src/: agent_install.rs  bom_reader.rs  lsp_rewrite.rs  main.rs  remote_host.rs  runtime_proxy.rs  windows_agent_install.rs
doc/: nvim-remote-mirror.txt
docs/: agent-registry.md  architecture-user-stories.md  configuration.md  design.md  plugin-compatibility.md  protocol.md  quality-gates.md  releasing.md  save-recovery.md  v1-roadmap.md  workspace-runtime.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/registry_manifest/: duplicate-field.json  duplicate-target.json  valid-minimal.json
fuzz/corpus/registry_signatures/: duplicate-key.json  valid-shape.json
fuzz/corpus/registry_url_policy/: adversarial-template.txt  file-template.txt  https-template.txt  safe-artifact.txt  traversal-artifact.txt
fuzz/fuzz_targets/: protocol_frame.rs  registry_manifest.rs  registry_signatures.rs  registry_url_policy.rs  runtime_frame.rs
lua/nvim_remote_mirror/: adapters.lua  init.lua  pickers.lua  runtime.lua  ui.lua  workspace.lua  workspace_runtime.lua
lua/nvim_remote_mirror/integrations/: toggleterm.lua
plugin/: nvim_remote_mirror.lua
scripts/: check_release_workflows.sh  perf_smoke.sh  test_release_workflow_policy.sh
tests/: adapters.lua  agent_commands.lua  auto_agent_connect.lua  autohydrate_pending.lua  background_rescan_interval.lua  bootstrap_timeout.lua  find_generation.lua  git_commands.lua  grep_cache_empty.lua  lsp.lua  notifications.lua  open_terminal_async.lua  reconnect_transport.lua  registry_config.lua  registry_policy_connect.lua  request_send_failure.lua  runtime_identity.lua  runtime_integration.lua  save_queue.lua  socket_connection.lua  socket_eof.lua  socket_security.lua  ssh_agent_path.lua  status_connection.lua  target_validation.lua  toggleterm_integration.lua  toggleterm_upstream_smoke.lua  ui.lua  workspace_api.lua  workspace_client_readiness.lua  workspace_flush.lua  workspace_info_connect.lua  workspace_info_failure.lua  workspace_readiness_v2.lua  workspace_runtime.lua  workspace_runtime_broker.lua
