[workspace]
members = [
    "crates/nrm-agent",
    "crates/nrm-protocol",
    "crates/nrm-sidecar",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
thiserror = "1.0"
walkdir = "2.5"
