[workspace]
members = [
    "crates/nrm-agent",
    "crates/nrm-protocol",
    "crates/nrm-registry",
    "crates/nrm-sidecar",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8.2"
ed25519-dalek = "3.0"
fs4 = "1.1"
ignore = "0.4"
libc = "0.2"
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
rusqlite = { version = "0.32", features = ["bundled"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.13"
thiserror = "1.0"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
url = "2.5"
walkdir = "2.5"
