[package]
name = "nrm-protocol-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nrm-protocol = { path = "../crates/nrm-protocol" }

[[bin]]
name = "protocol_frame"
path = "fuzz_targets/protocol_frame.rs"
test = false
doc = false
bench = false

[workspace]
