[package]
name = "nrm-registry"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
fs4.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
