[package]
name = "nrm-sidecar"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
libc.workspace = true
nrm-protocol = { path = "../nrm-protocol" }
nrm-registry = { path = "../nrm-registry" }
rusqlite.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
flate2.workspace = true
tempfile.workspace = true
